-fixed README.md text -replaced List creation